[gd_scene load_steps=10 format=3 uid="uid://bludcanti0bb0"]

[ext_resource type="Script" path="res://scripts/playerController.gd" id="1_m0ur7"]
[ext_resource type="PackedScene" uid="uid://bef1spuw62mxa" path="res://scenes/laser.tscn" id="2_chi2o"]
[ext_resource type="Texture2D" uid="uid://cfwj8up71v8sy" path="res://ressources/sprites/tileset/tranquil_tunnels_transparent.png" id="3_0g02q"]
[ext_resource type="Script" path="res://scripts/shine.gd" id="4_q3xiy"]
[ext_resource type="SpriteFrames" uid="uid://gwlclrst81mi" path="res://ressources/animations/character_animation.tres" id="5_0pmfi"]
[ext_resource type="Texture2D" uid="uid://bat606jmai1xy" path="res://ressources/sprites/shine.png" id="5_owmrs"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_33kfy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mhmhv"]
size = Vector2(11, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_514l0"]
size = Vector2(10, 10)

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("player_animation", "o_dash_fire_sprite", "shine")]
position = Vector2(-107, -151)
script = ExtResource("1_m0ur7")
player_animation = NodePath("Animation")
double_jump_height = 70.0
jump_squat_duration = 0.1
jump_count = 2
max_acceleration = 3600
h_dash_duration = 0.18
h_dash_speed = 800.0
o_dash_duration = 0.05
o_dash_speed = 300.0
o_dash_pause_duration = 0.5
o_dash_fire_sprite = NodePath("Fire")
laser_scene = ExtResource("2_chi2o")
shine = NodePath("Shine")
shine_gravity_mutliplicator = 0.06

[node name="Fire" type="Sprite2D" parent="."]
visible = false
z_index = 1
texture = ExtResource("3_0g02q")
region_enabled = true
region_rect = Rect2(948, 705, 14, 15)

[node name="Shine" type="Node2D" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("4_q3xiy")
sprite = NodePath("Sprite")

[node name="HitBox" type="Area2D" parent="Shine"]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Shine/HitBox"]
shape = SubResource("RectangleShape2D_33kfy")

[node name="Sprite" type="Sprite2D" parent="Shine"]
visible = false
texture = ExtResource("5_owmrs")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_mhmhv")

[node name="RoomDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="RoomDetector"]
shape = SubResource("RectangleShape2D_514l0")

[node name="Animation" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = ExtResource("5_0pmfi")
animation = &"idle"
frame_progress = 0.80741

[connection signal="area_entered" from="Shine/HitBox" to="Shine" method="_on_hit_box_area_entered"]
[connection signal="area_exited" from="Shine/HitBox" to="Shine" method="_on_hit_box_area_exited"]
[connection signal="area_entered" from="RoomDetector" to="." method="_on_room_detector_area_entered"]
[connection signal="area_exited" from="RoomDetector" to="." method="_on_room_detector_area_exited"]
